--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.25",
+    "@types/typescript": "^2.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -18,16 +19,17 @@
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "eslint": "^8.0.1",
+    "babel-plugin-styled-components": "latest",
+    "eslint": "^8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "prettier": "2.6.2",
-    "typescript": "^4.7.2"
+    "typescript": "4.7.2"
   }
 }
