--- a/blog-simples/client/package.json
+++ b/blog-simples/client/package.json
@@ -12,11 +12,13 @@
     "@types/styled-components": "^5.1.25",
     "@types/typescript": "^2.0.0",
     "next": "12.1.6",
+    "next-react-svg": "^1.1.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "18.0.5",
