--- a/blog-simples/client/package.json
+++ b/blog-simples/client/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.25",
     "@types/typescript": "^2.0.0",
     "next": "12.1.6",
+    "next-images": "^1.8.4",
     "next-react-svg": "^1.1.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "latest",
     "eslint": "^8.16.0",
     "eslint-config-next": "12.1.6",
